mudancas para mehoria e acrecentar pagina dos lugares

--- a/index.html
+++ b/index.html
@@ -36,16 +36,36 @@
           </p>
         </section>
 
-        <section id="lugares">
-          <h2>Lugares</h2>
-          <ul>
-            <li><strong>Fernando de Noronha (PE)</strong> – Águas cristalinas, vida marinha exuberante e praias entre as mais bonitas do mundo.</li>
-            <li><strong>Maldivas</strong> – Bangalôs sobre águas cristalinas e clima de luxo e tranquilidade.</li>
-            <li><strong>Arraial do Cabo (RJ)</strong> – Conhecido como o “Caribe brasileiro”, com mar azul-turquesa e areias branquinhas.</li>
-            <li><strong>Bora Bora (Polinésia Francesa)</strong> – Um clássico do romantismo, com montanhas vulcânicas e mar azul neon.</li>
-            <li><strong>Alter do Chão (PA)</strong> – Uma “praia de rio” com águas transparentes no coração da Amazônia.</li>
-          </ul>
-        </section>
+        
+  <h2>Lugares</h2>
+  <ul>
+    <li>
+      <a href="noronha.html" class="lugar Fernando de noronha">
+        <strong>Fernando de Noronha (PE)</strong> – Águas cristalinas, vida marinha exuberante e praias entre as mais bonitas do mundo.
+      </a>
+    </li>
+    <li>
+      <a href="maldivas.html" class="lugar">
+        <strong>Maldivas</strong> – Bangalôs sobre águas cristalinas e clima de luxo e tranquilidade.
+      </a>
+    </li>
+    <li>
+      <a href="arraial.html" class="lugar">
+        <strong>Arraial do Cabo (RJ)</strong> – Conhecido como o “Caribe brasileiro”, com mar azul-turquesa e areias branquinhas.
+      </a>
+    </li>
+    <li>
+      <a href="borabora.html" class="lugar">
+        <strong>Bora Bora (Polinésia Francesa)</strong> – Um clássico do romantismo, com montanhas vulcânicas e mar azul neon.
+      </a>
+    </li>
+    <li>
+      <a href="chao.html" class="lugar">
+        <strong>Alter do Chão (PA)</strong> – Uma “praia de rio” com águas transparentes no coração da Amazônia.
+      </a>
+    </li>
+  </ul>
+</section>
 
         <section id="dicas">
           <h2>Dicas de viagem</h2>
@@ -61,6 +81,9 @@
 
     <footer>
       Feito com carinho pela Marry
+      <button id="scrollTopBtn" title="Voltar ao topo">⬆️</button>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
